# abenity-python

./: .gitignore  LICENSE  README.md  private-key-test.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
abenity/: __init__.py  client.py
tests/: test_sso.py
