[metadata]
name = abenity-python
author = Brett Casbeer
author-email = brett.casbeer@gmail.com
summary = Abenity API client
description-file = README.rst
home-page = https://github.com/casbeebc/abenity-python
license = MIT
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
keywords =
    abenity
    api

[files]
packages =
    abenity-python

[wheel]
universal = 1
